# concurrent-http-requests-benchmarks

./: .gitignore  Cargo.toml  benchmark.sh  justfile  perf.data.old  readme.md
benchmark/: main.py
examples/: async_request_tasks.rs  available_parallelism.rs
python-client/: client.py
python-client-dev/: one_connection.py
python-server-asyncio/: frank.html  readme.md
python-server-flask/: README.md  server.py  start_gunicorn.sh
rust-client/: Cargo.toml
rust-client-dev/: Cargo.toml
rust-client-dev/src/: main.rs
rust-client/src/: lib.rs  main.rs
rust-client/src/implementations/: hyper_tokio.rs  mod.rs  ureq_threads.rs
rust-client/src/utils/: logging.rs  mod.rs  task.rs
server/: main.py
src/: lib.rs  logging.rs  task.rs  timeline.rs
