[package]
name = "async_vs_threads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
scheduled-thread-pool = "0.2.6"
reqwest = { version = "0.11.11", features = ["json", "blocking"] }
chrono = "0.4.22"
tokio = { version = "1.20.1", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.8.0"
csv = "1.1.6"
