[package]
name = "rust-client-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version="0.14.23", features=["full"]}
tower = { version = "0.4", features = ["full"] }
tokio = { version = "1.22.0", features = ["full"] }
http = "0.2.8"
bytes = "1.2.1"
http-body-util = "0.1.0-rc.1"
log = "0.4"
pretty_env_logger = "0.4.0"
