[package]
name = "rust_request_clients"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
tokio = { version = "1.20.1", features = ["full", "tracing", "rt-multi-thread"]}

tracing = "0.1.36"
tracing-subscriber = "0.3.16"
tracing-opentelemetry = "0.17.4"
opentelemetry = {version = "0.17.0", features = ["rt-tokio"]}
opentelemetry-jaeger = {version = "0.16.0", features = ["rt-tokio"]}

clap = { version = "4.0.18", features = ["derive"] }

ureq = "2.5.0"
reqwest = { version = "0.11", features = ["json"] }
hyper = "0.14.23"
